@@ -1,12 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST sndio-0.0.10.tar.gz 140878 SHA256 100554667533f7854e703a88c167215926a58b5c898e6d3e02b60be26c5415ae SHA512 45e45a0d1e4fe1e3345606cbdf2313e14c2018bd72c10e6bc9213f2a217d0dfc29631294ef65744826247b3583dd83fb405d4eb5b9828b98871159d3ad42c3ca WHIRLPOOL 871205d70e1a9124677e574c697243490d44635d197ff4ba5d4cb2dd1c011ddfe4571b5b58c79e926566b15e6ac7c9a289ec04db64c56da39ce80c2eacda2d19
 DIST sndio-0.0.8.tar.gz 156929 SHA256 5fea4ca261e2a09a8504fda047625ae38cb50f71432285c3605c44ed0d700fdf SHA512 35d011f47d93be19c97ffbb031d4611ad8c26bbb9ddb62073506aca991ab3424dcc0c96d9073e89e5455151f2ed7a001e56a7d1d2d9646c7c3e36e5f69e8da76 WHIRLPOOL 05ff5129acee8fab6c635a933ca33bf2a71d6cc3b3dd42a2243c491b81e211d9cc003cfb752148c217b822134a920d3329b3d98550717ae9ca1ea334a18b52be
 DIST sndio-0_p20120925.tar.bz2 108604 SHA256 09424042e53a29996615edb242ec264a024e418047c6901817e0a5a7e201f1c0 SHA512 b17bc5235efdb5d991170b81782bcbedcf300622a85bd4c691b4da0010756e3f4b54d8265b2a75f293777f3a9f318fe895d6054e7d31e3bff93573eab9e1e53f WHIRLPOOL 009e41c13caf2d2e2f8e761d9078bae52636774cb870126867c403b6ceb6fa59bb4aa792cb91874912d3f65652c138f8460c8c5b48502516a2ab00326dd7cd69
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUSuL0ACgkQknrdDGLu8JDtUwD/SjKsuZN7usSXWUBICMy7kWQD
-B8KKxsrYZN2DFhUtyboA/jypMS9KWRrvO5deLTpGTpNT+C6iIq4TEvvdh+hYWOn9
-=1Cb7
+iF4EAREIAAYFAlWoICkACgkQknrdDGLu8JBGfgD/WM4q3qbmqyWJ4DqCH22f/Ag5
+xIeDLm1ywJjToUzvQwUA/Rt0XxolNxqrbhbHPODAleUO47cDQlCeWxoT46EFpHuK
+=Z0h/
 -----END PGP SIGNATURE-----
